--- a/lab3/todo/1.css
+++ b/lab3/todo/1.css
@@ -1,1 +1,18 @@
+body {
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    max-width: 600px;
+    margin: auto;
+}
+
+.list-group-item {
+    display: flex;
+    align-items: center;
+}
+
+.btn-danger {
+    margin-left: auto;
+}
 
